# sena-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/na_wmv_player/src/: api.rs  lib.rs
crates/pal-asset/: Cargo.toml
crates/pal-asset/src/: archive_dat.rs  decrypt.rs  error.rs  key.rs  lib.rs  nls.rs  pac.rs  resource.rs  vfs.rs
crates/pal-asset/tests/: asset_fixture.rs
crates/pal-assets/: Cargo.toml
crates/pal-assets/src/: main.rs
crates/pal-decompiler/: Cargo.toml
crates/pal-decompiler/src/: assets.rs  cfg.rs  codegen.rs  dat.rs  decompile.rs  main.rs  strings.rs
crates/pal-disassembled/: Cargo.toml
crates/pal-disassembled/src/: main.rs
crates/pal-pac-unpacker/: Cargo.toml
crates/pal-pac-unpacker/src/: main.rs
crates/pal-script/: Cargo.toml
crates/pal-script/src/: disasm.rs  error.rs  extsig.rs  extsig_auto.rs  lib.rs  opcodes.rs  operand.rs  point.rs  script.rs  util.rs
crates/pal-script/tests/: disasm_fixture.rs
crates/pal-vm/: Cargo.toml
crates/pal-vm/src/: animation.rs  app.rs  assets.rs  audio.rs  config.rs  debug.rs  dump_graphic.rs  dump_pgd.rs  dump_pgd_info.rs  dump_resource.rs  effect.rs  engine.rs  event.rs  ffi.rs  font.rs  image.rs  input.rs  lib.rs  list.rs  memory.rs  msprite.rs  platform_time.rs  runtime.rs  scene.rs  sena.rs  sprite.rs  system.rs  task.rs  wasm_entry.rs
crates/pal-vm/src/renderer/: mod.rs  shader.rs
crates/pal-vm/src/renderer/shaders/: bicubic.wgsl  draw_primitive_up_2d.wgsl  radial_blur.wgsl  raster.wgsl
crates/pal-vm/tests/: animation_fixture.rs  audio_fixture.rs  debug_dump_fixture.rs  effect_fixture.rs  engine_fixture.rs  font_fixture.rs  input_fixture.rs  list_fixture.rs  memory_fixture.rs  msprite_fixture.rs  nls_config_fixture.rs  operand_fixture.rs  render_debug_fixture.rs  runtime_fixture.rs  sprite_fixture.rs  system_fixture.rs  task_fixture.rs
platform/: .gitignore
platform/android/: settings.gradle.kts
platform/android/app/: build.gradle.kts
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/assets/: config.toml
platform/android/app/src/main/cpp/: CMakeLists.txt  sena_jni.cpp
platform/android/app/src/main/cpp/include/: sena.h
platform/android/app/src/main/java/io/github/xmoezzz/sena/: GameAdapter.java  GameDisplayInfo.java  GameEntry.java  GameLibrary.java  LaunchConfig.java  LauncherActivity.java  NativeSena.java  NlsOption.java  SenaGameActivity.java
platform/android/app/src/main/res/layout/: activity_launcher.xml  activity_player.xml  item_game.xml
platform/android/app/src/main/res/values/: strings.xml  styles.xml
platform/ios/SenaLauncher/: project.yml
platform/ios/SenaLauncher/Headers/: sena.h
platform/ios/SenaLauncher/SenaLauncher/: ContentView.swift  GameLibrary.swift  Info.plist  SenaLauncherApp.swift  SenaPlayer.swift
platform/ios/SenaLauncher/SenaLauncher.xcodeproj/: project.pbxproj
platform/macos/SenaLauncher/: project.yml
platform/macos/SenaLauncher/Headers/: sena.h
platform/macos/SenaLauncher/SenaLauncher/: ContentView.swift  GameLibrary.swift  Info.plist  LauncherMain.swift  SenaLauncherApp.swift
platform/macos/SenaLauncher/SenaLauncher.xcodeproj/: project.pbxproj
platform/scripts/: build_host_release.sh  build_ios_xcframework.sh  build_wasm.sh  build_windows_msvc.cmd  clean_ios_build.sh  package_android_apk.sh  package_android_sim.sh  package_ios_altstore_ipa.sh  package_ios_sim.sh  package_macos_app.sh  package_macos_dmg.sh
platform/wasm/: index.html  main.js  style.css
