[package]
name = "pal-decompiler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "pal-decompiler"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
encoding_rs.workspace = true
pal-script.workspace = true
pal-asset.workspace = true
