[package]
name = "pal-vm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "pal_vm"
path = "src/lib.rs"

[[bin]]
name = "sena"
path = "src/sena.rs"

[[bin]]
name = "dump-pgd"
path = "src/dump_pgd.rs"

[[bin]]
name = "dump-graphic"
path = "src/dump_graphic.rs"

[[bin]]
name = "dump-pgd-info"
path = "src/dump_pgd_info.rs"

[[bin]]
name = "dump-resource"
path = "src/dump_resource.rs"

[dependencies]
ab_glyph.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
clap.workspace = true
encoding_rs.workspace = true
env_logger.workspace = true
log.workspace = true
kira.workspace = true
pal-asset.workspace = true
pal-script.workspace = true
png = "0.17"
pollster.workspace = true
softbuffer.workspace = true
wgpu.workspace = true
wmv-decoder.workspace = true
winit.workspace = true
